--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cs147.goalfriends" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -16,7 +18,28 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FindFriendActivity"/>
+        <activity android:name=".FindFriendActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="cs147.goalfriends.MainActivity" />
+        </activity>
+        <activity android:name=".FriendPickerActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="cs147.goalfriends.MainActivity" />
+        </activity>
+        <activity android:name=".MotivateActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="cs147.goalfriends.MainActivity" />
+        </activity>
+        <activity android:name=".ScheduleWorkoutActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="cs147.goalfriends.MainActivity" />
+        </activity>
+
+
     </application>
 
 </manifest>
