--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v13:20.+'
     compile 'com.firebase:firebase-client-android:2.0.1+'
+    compile 'com.pkmmte.view:circularimageview:1.1'
 
 }
